# Rustify

./: .gitignore  .sops.yaml  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/external-secrets/: externalsecret.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
deploy/terraform/: alb.tf  backend.tf  ecr.tf  eks.tf  elasticache.tf  main.tf  oidc.tf  outputs.tf  providers.tf  rds.tf  route53.tf  variables.tf
docker/: Dockerfile
migrations/: 0001_init.sql
src/: cache.rs  clicks.rs  errors.rs  main.rs  qr.rs  state.rs  utils.rs
src/routes/: index.rs  mod.rs  resolve.rs  shorten.rs  stats.rs
static/: app.js  index.html  style.css
