[package]
name = "rustify"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["trace"] }
opentelemetry-otlp = { version = "0.26", features = ["http-proto"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
url = "2.5"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
bytes = "1.6"
time = "0.3"
async-trait = "0.1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros", "migrate"] }
axum-prometheus = "0.6"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "limit"] }
tower_governor = { version = "0.5", features = ["axum"] }
dotenvy = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
